<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.guest.GuestProfileFragment">

    <!-- Wavy Mask -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/profile_header"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Application Name -->
    <!-- Adjust the margin as needed -->

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/name_placeholder"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:id="@+id/emailImg"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_email" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="250dp"
            android:layout_height="26sp"
            android:layout_marginStart="20dp"
            android:text="@string/email_placeholder"
            style="@style/ProfileText"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:id="@+id/phoneImg"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="250dp"
            android:layout_height="26sp"
            android:layout_marginStart="20dp"
            android:text="@string/phone_placeholder"
            style="@style/ProfileText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:id="@+id/addressImg"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="250dp"
            android:layout_height="26sp"
            android:layout_marginStart="20dp"
            android:text="@string/address_placeholder"
            style="@style/ProfileText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/role"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
>

        <ImageView
            android:id="@+id/roleImg"
            style="@style/ProfileIcon"

            android:src="@drawable/ic_role" />

        <TextView
            android:id="@+id/roleText"
            android:layout_width="250dp"
            android:layout_height="26sp"
            android:layout_marginStart="20dp"
            android:text="@string/guest"
            style="@style/ProfileText" />
    </LinearLayout>

    <!-- Submit Button -->
    <LinearLayout
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        style="@style/Button"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/editProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Edit Profile"
            android:layout_marginEnd="5dp"
            android:padding="3dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/editProfileIcon"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_pencil"
            android:contentDescription="Edit Profile Icon"/>



    </LinearLayout>


    <!-- Delete Button -->
    <LinearLayout
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:layout_marginStart="26dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_trash"
            android:contentDescription="Delete Icon"/>

        <TextView
            android:id="@+id/deleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/delete_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:alpha="0.7"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
